na space java com.tw ter.cr_m xer.thr ftjava
#@na space scala com.tw ter.cr_m xer.thr ftscala
#@na space strato com.tw ter.cr_m xer

#  n CrM xer, one org should only have one Product
enum Product {
  Ho  = 1
  Not f cat ons = 2
  Ema l = 3
  MoreT etsModule = 4 # aka RUX
   m rs ve d aV e r = 5
  V deoCarousel = 6
  ExploreTop cs = 7
  Ads = 8
  Ho RealT   = 9 // Ho  Real-T   Tab  s cons dered as a d fferent Product surface to Ho  Tab.  's  n early exper  nt phase.
  Top cLand ngPage = 10
  Ho Top csBackf ll = 11
  Top cT etsStrato = 12
}
