na space java com.tw ter.follow_recom ndat ons.thr ftjava
#@na space scala com.tw ter.follow_recom ndat ons.thr ftscala
#@na space strato com.tw ter.follow_recom ndat ons

enum D splayLocat on {
    S DEBAR = 0
    PROF LE_S DEBAR = 2
    CLUSTER_FOLLOW = 7
    NEW_USER_SARUS_BACKF LL = 12
    PROF LE_DEV CE_FOLLOW = 23
    RECOS_BACKF LL = 32
    HOME_T MEL NE = 39    # HOME_T MEL NE_WTF  n  rm 
    PROF LE_TOP_FOLLOW NG = 42
    PROF LE_TOP_FOLLOWERS = 43
    PEOPLE_PLUS_PLUS = 47
    EXPLORE_TAB = 57
    Mag cRecs = 59        # Account recom ndat on  n not f cat on
    AB_UPLOAD_ NJECT ON = 60
    /**
     * To prevent sett ng 2 d splay locat ons w h t  sa   ndex  n FRS.
     *
     * T  d splay locat on should be added to t  follow ng f les:
     *  - follow-recom ndat ons-serv ce/thr ft/src/ma n/thr ft/d splay_locat on.thr ft
     *  - follow-recom ndat ons-serv ce/thr ft/src/ma n/thr ft/logg ng/d splay_locat on.thr ft
     *  - follow-recom ndat ons-serv ce/common/src/ma n/scala/com/tw ter/follow_recom ndat ons/common/models/D splayLocat on.scala
   */
    CAMPA GN_FORM = 61
    RUX_LAND NG_PAGE = 62
    PROF LE_BONUS_FOLLOW = 63
    ELECT ON_EXPLORE_WTF = 64
    HTL_BONUS_FOLLOW = 65
    TOP C_LAND NG_PAGE_HEADER = 66
    NUX_PYMK = 67
    NUX_ NTERESTS = 68
    REACT VE_FOLLOW = 69
    RUX_PYMK = 70
     ND A_COV D19_CURATED_ACCOUNTS_WTF = 71
    NUX_TOP C_BONUS_FOLLOW = 72
    TWEET_NOT F CAT ON_RECS = 73
    HTL_SPACE_HOSTS = 74
    POST_NUX_FOLLOW_TASK = 75
    TOP C_LAND NG_PAGE = 76
    USER_TYPEAHEAD_PREFETCH = 77
    HOME_T MEL NE_RELATABLE_ACCOUNTS = 78
    NUX_GEO_CATEGORY = 79
    NUX_ NTERESTS_CATEGORY = 80
    NUX_PYMK_CATEGORY = 81
    TOP_ART CLES = 82
    HOME_T MEL NE_TWEET_RECS = 83
    HTL_BULK_FR END_FOLLOWS = 84
    NUX_AUTO_FOLLOW = 85
    SEARCH_BONUS_FOLLOW = 86
    CONTENT_RECOMMENDER = 87
    HOME_T MEL NE_REVERSE_CHRON = 88
}
